--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
   repositories {
+    mavenLocal()
+    maven { url 'https://maven.google.com' }
     jcenter()
   }
   dependencies {
@@ -14,6 +16,8 @@ buildscript {
 
 allprojects {
   repositories {
+    mavenLocal()
+    maven { url 'https://maven.google.com' }
     jcenter()
   }
 }
