--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
   compile "com.android.support:design:$ANDROID_SUPPORT_VERSION"
   compile "com.android.support:support-v4:$ANDROID_SUPPORT_VERSION"
   compile 'com.android.support.constraint:constraint-layout:1.0.2'
+  compile 'com.squareup.moshi:moshi:1.5.0'
   testCompile 'junit:junit:4.12'
 }
