--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
   compile "com.android.support:support-v4:$ANDROID_SUPPORT_VERSION"
   compile 'com.android.support.constraint:constraint-layout:1.0.2'
   testCompile 'junit:junit:4.12'
+  androidTestCompile 'com.squareup.spoon:spoon-client:1.7.1'
 }
