--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:2.3.3'
-
+    classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.2.2'
+    classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5'
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
