--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,36 +1,37 @@
 apply plugin: 'com.android.application'
+apply plugin: 'spoon'
 
 def ANDROID_SUPPORT_VERSION = '26.0.1'
 
 android {
-  compileSdkVersion 26
-  buildToolsVersion "26.0.0"
-  defaultConfig {
-    applicationId "br.com.ps.adctest"
-    minSdkVersion 15
-    targetSdkVersion 26
-    versionCode 1
-    versionName "1.0"
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    compileSdkVersion 26
+    buildToolsVersion "26.0.0"
+    defaultConfig {
+        applicationId "br.com.ps.adctest"
+        minSdkVersion 15
+        targetSdkVersion 26
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-  }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-    exclude group: 'com.android.support', module: 'support-annotations'
-  })
-  compile "com.android.support:appcompat-v7:$ANDROID_SUPPORT_VERSION"
-  compile "com.android.support:design:$ANDROID_SUPPORT_VERSION"
-  compile "com.android.support:support-v4:$ANDROID_SUPPORT_VERSION"
-  compile 'com.android.support.constraint:constraint-layout:1.0.2'
-  compile 'com.squareup.moshi:moshi:1.5.0'
-  testCompile 'junit:junit:4.12'
-  androidTestCompile 'com.squareup.spoon:spoon-client:1.7.1'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    compile "com.android.support:appcompat-v7:$ANDROID_SUPPORT_VERSION"
+    compile "com.android.support:design:$ANDROID_SUPPORT_VERSION"
+    compile "com.android.support:support-v4:$ANDROID_SUPPORT_VERSION"
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.squareup.moshi:moshi:1.5.0'
+    testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.squareup.spoon:spoon-client:1.7.1'
 }
